--- a/app/src/main/res/layout/activity_location_searches.xml
+++ b/app/src/main/res/layout/activity_location_searches.xml
@@ -11,6 +11,16 @@
         android:layout_height="64dp"
         android:layout_marginHorizontal="12dp"
         android:layout_marginVertical="12dp"
+        android:padding="4dp"
         android:iconifiedByDefault="false" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/layout_location_searches_recycler"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginHorizontal="12dp"
+        android:layout_marginVertical="12dp"
+        android:padding="4dp"
+        android:clipToPadding="false"/>
 
 </LinearLayout>
