--- a/app/src/main/res/layout/dialog_location_service.xml
+++ b/app/src/main/res/layout/dialog_location_service.xml
@@ -10,14 +10,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="12dp"
-        android:text="Please grant Location permission to use the app properly."
+        android:text="Please turn Location service on to use the app properly."
         android:textSize="16sp"
         android:textAlignment="center"/>
 
     <Button
-        android:id="@+id/button_dialog_location_permission"
+        android:id="@+id/button_dialog_location_service"
         android:layout_width="match_parent"
         android:layout_height="64dp"
-        android:text="Grant Permission"/>
+        android:text="Turn On Location"/>
 
 </LinearLayout>
