Add ring distance seekbar in Main activity Changed minimum level to 26 for PolyUtil Add QoL zoom to user location in LocationHelper on first userLoc update Add ring distance seekbar reference and onProgressChanged function Add draw and update map circle functions Add on launch change camera position to Metro Manila, PH Add en/disabling of views depending on alarm state

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,15 +21,22 @@
             android:id="@+id/button_main_search_location"
             android:layout_width="match_parent"
             android:layout_height="72dp"
-            android:layout_marginHorizontal="20dp"
+            android:layout_marginHorizontal="40dp"
             android:layout_marginVertical="8dp"
             android:text="Search Location"/>
+
+        <SeekBar
+            android:id="@+id/seekbar_main_ring_distance"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="40dp"
+            android:layout_marginVertical="8dp" />
 
         <Button
             android:id="@+id/button_main_start_alarm"
             android:layout_width="match_parent"
             android:layout_height="72dp"
-            android:layout_marginHorizontal="20dp"
+            android:layout_marginHorizontal="40dp"
             android:layout_marginVertical="8dp"
             android:text="Start Alarm"/>
 
