--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -8,14 +8,17 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/layout_history_recycler"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
 
     <Button
         android:id="@+id/button_history_delete_history"
         android:layout_width="match_parent"
-        android:layout_height="72dp"
+        android:layout_height="64dp"
         android:layout_marginHorizontal="40dp"
         android:layout_marginVertical="8dp"
-        android:text="Delete History"/>
+        android:text="Delete History"
+        android:textSize="16sp"
+        android:fontFamily="@font/lato_bold" />
 
 </LinearLayout>
