--- a/app/src/main/res/layout/dialog_location_service.xml
+++ b/app/src/main/res/layout/dialog_location_service.xml
@@ -12,12 +12,14 @@
         android:layout_marginBottom="12dp"
         android:text="Please turn Location service on to use the app properly."
         android:textSize="16sp"
-        android:textAlignment="center"/>
+        android:textAlignment="center"
+        android:fontFamily="@font/lato_bold" />
 
     <Button
         android:id="@+id/button_dialog_location_service"
         android:layout_width="match_parent"
         android:layout_height="64dp"
-        android:text="Turn On Location"/>
+        android:text="Turn On Location"
+        android:fontFamily="@font/lato_black" />
 
 </LinearLayout>
