--- a/app/src/main/res/layout/item_history.xml
+++ b/app/src/main/res/layout/item_history.xml
@@ -11,13 +11,14 @@
         android:layout_height="wrap_content"
         android:text="Destination Name"
         android:textSize="18sp"
-        android:textStyle="bold"/>
+        android:fontFamily="@font/lato_bold"/>
 
     <TextView
         android:id="@+id/history_item_distance"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Distance"
-        android:textSize="14sp" />
+        android:textSize="14sp"
+        android:fontFamily="@font/lato_regular"/>
 
 </LinearLayout>
