--- a/app/src/main/res/layout/item_place_prediction.xml
+++ b/app/src/main/res/layout/item_place_prediction.xml
@@ -15,7 +15,7 @@
         android:layout_marginVertical="2dp"
         android:textSize="20sp"
         android:textColor="@color/black"
-        android:textStyle="bold"
+        android:fontFamily="@font/lato_bold"
         android:maxLines="1"
         android:ellipsize="end"/>
 
@@ -26,6 +26,7 @@
         android:layout_marginVertical="2dp"
         android:textSize="12sp"
         android:textColor="@color/quantum_grey700"
+        android:fontFamily="@font/lato_regular"
         android:maxLines="1"
         android:ellipsize="end"/>
     
