--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,29 +24,43 @@
             android:orientation="vertical"
             android:layout_alignParentTop="true">
     
-            <FrameLayout
+            <LinearLayout
                 android:id="@+id/frame_main_alarm_banner"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginHorizontal="24dp"
-                android:layout_marginVertical="24dp"
+                android:layout_marginHorizontal="16dp"
+                android:layout_marginVertical="16dp"
                 android:paddingHorizontal="24dp"
-                android:paddingVertical="24dp"
-                android:background="@color/black"
+                android:paddingVertical="52dp"
+                android:orientation="vertical"
+                android:background="@drawable/container_main_alarm_header"
                 tools:ignore="UselessParent">
     
                 <TextView
                     android:id="@+id/text_main_alarm_distance"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:paddingVertical="24sp"
-                    android:text="Xm"
-                    android:textSize="56sp"
+                    android:paddingVertical="4sp"
+                    android:text="2000m"
+                    android:textSize="72sp"
                     android:textColor="@color/white"
                     android:fontFamily="@font/lato_black"
                     android:layout_gravity="center"/>
+
+                <TextView
+                    android:id="@+id/text_main_alarm_address"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingVertical="4sp"
+                    android:text="Destination Address"
+                    android:textSize="12sp"
+                    android:textColor="@color/white"
+                    android:fontFamily="@font/lato_regular"
+                    android:textAllCaps="false"
+                    android:gravity="center"
+                    android:layout_gravity="center"/>
     
-            </FrameLayout>
+            </LinearLayout>
     
         </LinearLayout>
 
@@ -73,7 +87,6 @@
                 android:layout_marginHorizontal="12dp"
                 android:text="Search Location"
                 android:textSize="16sp"
-                android:textAllCaps="false"
                 android:fontFamily="@font/lato_bold"
                 android:background="@drawable/button_main_primary"/>
     
@@ -94,7 +107,6 @@
                     android:layout_height="52dp"
                     android:text="Choose Ringtone"
                     android:textSize="16sp"
-                    android:textAllCaps="false"
                     android:fontFamily="@font/lato_bold"
                     android:background="@drawable/button_main_secondary"/>
 
@@ -154,6 +166,6 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:background="@android:color/white"
-        app:menu="@menu/drawer_main_side_menu"/>
+        app:menu="@menu/drawer_main_side_menu" />
 
 </androidx.drawerlayout.widget.DrawerLayout>
