--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -1,9 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/layout_history_origin"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="?attr/colorSurface">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="64dp"
+        android:orientation="horizontal"
+        android:background="?attr/menuActivityHeaderBG">
+
+        <ImageView
+            android:id="@+id/img_history_back_button"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginStart="16dp"
+            android:src="@drawable/quantum_ic_arrow_back_grey600_24"
+            android:clickable="true"
+            app:tint="?attr/colorSurface" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingTop="12dp"
+            android:paddingLeft="16dp"
+            android:text="History"
+            android:textColor="?attr/colorSurface"
+            android:textStyle="bold"
+            android:textSize="32sp"
+            android:layout_gravity="center"/>
+
+    </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/layout_history_recycler"
@@ -18,7 +49,9 @@
         android:layout_marginHorizontal="40dp"
         android:layout_marginVertical="8dp"
         android:text="Delete History"
+        android:textColor="?attr/colorOnPrimary"
         android:textSize="16sp"
-        android:fontFamily="@font/lato_bold" />
+        android:fontFamily="@font/lato_bold"
+        android:background="@drawable/button_main_primary" />
 
 </LinearLayout>
