--- a/app/src/main/res/layout/activity_location_searches.xml
+++ b/app/src/main/res/layout/activity_location_searches.xml
@@ -1,18 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/layout_location_searches_origin"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="?attr/colorSurface">
 
-    <SearchView
-        android:id="@+id/search_location_searches_search_location"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="64dp"
-        android:layout_marginHorizontal="12dp"
-        android:layout_marginVertical="12dp"
-        android:padding="4dp"
-        android:iconifiedByDefault="false" />
+        android:orientation="horizontal"
+        android:background="?attr/menuActivityHeaderBG">
+
+        <ImageView
+            android:id="@+id/img_search_location_back_button"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginStart="16dp"
+            android:src="@drawable/quantum_ic_arrow_back_grey600_24"
+            android:clickable="true"
+            app:tint="?attr/colorSurface" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingTop="12dp"
+            android:paddingLeft="16dp"
+            android:text="Search"
+            android:textColor="?attr/colorSurface"
+            android:textStyle="bold"
+            android:textSize="32sp"
+            android:layout_gravity="center"/>
+
+    </LinearLayout>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingVertical="8dp"
+        android:background="?attr/menuActivityHeaderBG">
+
+        <SearchView
+            android:id="@+id/search_location_searches_search_location"
+            android:layout_width="match_parent"
+            android:layout_height="52dp"
+            android:layout_marginHorizontal="12dp"
+            android:layout_marginVertical="12dp"
+            android:iconifiedByDefault="false"
+            android:paddingHorizontal="4dp"
+            android:paddingVertical="12dp"
+            android:queryHint="Enter location name"
+            android:background="@drawable/container_search_location_search_view"/>
+
+    </FrameLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/layout_location_searches_recycler"
